Update thesis files
Version of thesis given for deposit

--- a/app_autoparam_nonlinear_vector_fields.tex
+++ b/app_autoparam_nonlinear_vector_fields.tex
@@ -1,7 +1,7 @@
 \section{Nonlinear vector fields}
 \label{A:autoparam nonlin vec fields}
 
-In this appendix, we derive exact formulae for $b^1$ and $b^2$ in~\eqref{E:standard1}. Although quadratic nonlinearities in coupled oscillators affect the normal froms or the averaged equations at higher order, the presence of $1:2$ resonance make their contribution at ${\Order}(\epsilon)$ paramount. For the problem under consideration, we have:
+In this appendix, we derive exact formulas for $b^1$ and $b^2$ in~\eqref{E:standard1}. Although quadratic nonlinearities in coupled oscillators affect the normal forms or the averaged equations at higher order, the presence of $1:2$ resonance make their contribution at ${\Order}(\epsilon)$ paramount. For the problem under consideration, we have:
 \begin{align*}
 b^1_1(x,t) &= \frac{1}{4} (x_2^2 - x_4^2) [\sin(2q + 1)t + \sin(2q - 1)t]\\
 &\quad - \frac12 x_2 x_4 [\cos(2q + 1)t + \cos(2q - 1)t]\\
