--- a/app_autoparam_path_integrals.tex
+++ b/app_autoparam_path_integrals.tex
@@ -9,7 +9,7 @@ we change the time integrals
 \[
 {T_{i}(z)}\equiv\int_0^{\period_{i}} dt, \qquad \INT_{i}^{j}\equiv\int_0^{\period_{i}} \frac{1}{u_1^j(t)}dt
 \] 
-to path integrals with respect to the fast variable $u_1(t),u_2(t)$. This process effectively removes the fast variable $u_1(t),u_2(t)$. To this end, for an arbitary value of $h$ we define from~\eqref{E:AvgH}
+to path integrals with respect to the fast variable $u_1(t),u_2(t)$. This process effectively removes the fast variable $u_1(t),u_2(t)$. To this end, for an arbitrary value of $h$ we define from~\eqref{E:AvgH}
 \begin{equation}
 u_2^{\pm}= \pm \sqrt{\frac{I u_1 - u_1^3 - 2 h}{u_1}} \equiv \pm\sqrt{f(u_1)}
 \end{equation}
