--- a/main.tex
+++ b/main.tex
@@ -14,53 +14,53 @@
 \usepackage{natbib}
 \usepackage{psfrag}
 \usepackage[overload]{textcase}
-%% hyperref manual advises loading this package last
-\usepackage{hyperref}
-\hypersetup{colorlinks=true,linkcolor=blue,citecolor=blue,breaklinks=true}
+% %% hyperref manual advises loading this package last
+% \usepackage{hyperref}
+% \hypersetup{colorlinks=true,linkcolor=blue,citecolor=blue,breaklinks=true}
 
 \phdthesis
 
 \title{Stochastic Averaging for Mechanical Systems}
 \author{Kristjan Onu}
-\department{Mechanical Science \& Engineering}
+\department{Theoretical and Applied Mechanics}
 \degreeyear{2010}
 
 \advisor{Professor N. Sri Namachchivaya}
 
-\committee{Professor N. Sri Namachchivaya, Director of Dissertation Research\\
-Professor Matthew West, Chair\\
+\committee{Professor Matthew West, Chair\\
+Professor N. Sri Namachchivaya, Director of Dissertation Research\\
 Professor R. Lee DeVille\\
 Professor Martin Ostoja-Starzewski}
 
 \newcommand{\Aave}{\operatorname{\mathbf A}}
 \newcommand{\Aa}{\mathfrak a}
-\newcommand{\prob}{\mathbf P}
+\newcommand{\BDY}{\circledast}
 \newcommand{\Expectation}{\operatorname{\mathbf E}}
 \newcommand{\Graph}{\mathfrak G}
 \newcommand{\Haus}{\mathscr H}
 \newcommand{\Hup}{H^*}
+\newcommand{\INT}{\mathscr I}
 \newcommand{\Int}{\mathcal I}
-\newcommand{\Real}{\mathbf R}
+\newcommand{\Order}{\mathcal O}
 \newcommand{\Ss}{\mathbf S}
 \newcommand{\Strat}{\mathfrak M}
-\newcommand{\period}{T}
 \newcommand{\Tave}{\operatorname{\mathbf M}}
 \newcommand{\Zz}{\mathbf Z}
-\newcommand{\Order}{\mathcal{O}}
+\newcommand{\bb}{\mathbf b}
+\newcommand{\bigb}{\mathcal B}
+\newcommand{\bigc}{\mathcal C}
 \newcommand{\crit}{\mathfrak c}
 \newcommand{\dom}{\mathscr D}
 \newcommand{\eval}[2][\right]{\relax\ifx#1\right\relax \left.\fi#2#1\rvert}
 \newcommand{\exit}{\mathfrak e}
 \newcommand{\filt}{\mathscr F}
 \newcommand{\gen}{\mathscr L}
+\newcommand{\integers}{\mathbf Z}
+\newcommand{\period}{T}
+\newcommand{\prob}{\mathbf P}
+\newcommand{\rationals}{\mathbf Q}
+\newcommand{\reals}{\mathbf R}
 \newcommand{\sech}{\operatorname{sech}}
-\newcommand{\s}{S}
-\newcommand{\BDY}{\circledast}
-\newcommand{\INT}{\mathscr I}
-\newcommand{\bigc}{\mathcal C}
-\newcommand{\bb}{\mathbf b}
-\newcommand{\bigb}{\mathcal B}
-\newcommand{\xv}{\boldsymbol x}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{assumption}[theorem]{Assumption}
@@ -143,9 +143,9 @@ To Maris V. Neimanis.
 \backmatter
 
 \bibliographystyle{abbrvnat}
-\bibliography{main}
+\bibliography{../../main}
 
-\aubio
-\input{biography}
+% \aubio
+% \input{biography}
 
 \end{document}
