--- a/abstract.tex
+++ b/abstract.tex
@@ -4,10 +4,10 @@ Two mechanical systems are studied in this thesis. One is a model for the motion
 
 First, and perhaps most importantly, the systems studied exhibit bifurcations. In order to average such systems, modern stochastic averaging theory based on the martingale problem is necessary. Bifurcations in the fast deterministic dynamics, it is seen, are associated with gluing boundary conditions in the averaged systems.
 
-Second, mechanical systems have three intrinsic timescales whereas averaging methods are normally used to treat two timescale problems. The presence of a third timescale leads to the introduction of a second averaging operator.
+Second, the two mechanical systems have three intrinsic timescales whereas averaging methods are normally used to treat two timescale problems. The presence of a third timescale leads to the introduction of a second averaging operator.
 
-The third novelty presented in this thesis is the treatment of systems in near-resonant motion. More specifically, the surface wave and autoparametric systems are studied as two degree of freedom systems that are set near 1:1 or 1:2 resonance. Stochastic averaging then reduces those systems' dimensions from four to two. Previously, stochastic averaging of mechanical systems has only been used to perform reductions from two dimensions to one.
+The third novelty presented in this thesis is the treatment of systems in near-resonant motion. More specifically, the surface wave and autoparametric systems are studied as two degree of freedom systems that are set near low-order resonances. Stochastic averaging then reduces those systems' dimensions from four to two. Previously, stochastic averaging of mechanical systems has only been used to perform reductions from two dimensions to one.
 
 The results of stochastic averaging theory lead to an equation describing the evolution of the probability distributions of the reduced system, the Fokker--Planck equation. Solving the steady-state two-dimensional Fokker--Planck equation forms a major part of this thesis; a finite-element method is used. Solving the Fokker--Planck equation necessitates the development of computational procedures to calculate the drift and diffusion coefficients of the equation, it also necessitates a clear understanding of how the gluing condition enters the specification of the equation, and, since the two-dimensional domain of the Fokker--Planck equation contains cusps, one must proceed with care when applying the finite-element method.
 
-From an engineering standpoint, the utility of the procedures developed in this thesis is to provide a new, semi-analytic probabilistic description of the long term response of stochastically forced systems. In closing, a few peculiar characteristics of the solutions produced are noted. These do not constitute a comprehensive study of the physical implications of the results obtained, but the methods presented do seem to put such a comprehensive endeavor within reach.
+From an engineering standpoint, the utility of the procedures developed in this thesis is to provide a new, semi-analytic probabilistic description of the long term response of stochastically forced systems. In closing, a few peculiar characteristics of the solutions produced are noted. These do not constitute a comprehensive study of the physical implications of the results obtained, but the methods presented seem to put such an endeavor within reach.
